kubernetes/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.2-alpine
        ports:
          - containerPort: 6379
        resources:
          requests:
            cpu: "100m"        
            memory: "128Mi"   
          limits:
            cpu: "200m"       
            memory: "256Mi"
