kubernetes/redis/redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ingress
  namespace: vote-app
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: worker
      - podSelector:
          matchLabels:
            app: vote
    ports:
      - protocol: TCP
        port: 6379
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: worker
    ports:
      - protocol: TCP
        port: 8080
  - to:
      - podSelector:
          matchLabels:
            app: db
    ports:
      - protocol: TCP
        port: 3306
